--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,28 +1,19 @@
 [tool.poetry]
-name = "sparql-notebooks"
+name = "georegister"
 version = "0.1.0"
-description = "Notebooks using linked data"
+description = "Where are most companies registered?"
 authors = ["Magdalena Surówka"]
 
 [tool.poetry.dependencies]
 python = "^3.9"
-ipykernel = "^5.3.4"
-sparqlkernel ="^1.3.0"
-matplotlib = "^3.4.2"
 mapclassify = "^2.4.2"
-pandas = "^1.2.4"
 graphly = {git = "https://github.com/zazuko/graphly.git", rev = "main"}
 folium = "^0.12.1"
-plotly = "^5.1.0"
-geopy = "^2.2.0"
-networkx = "^2.6.2"
-bokeh = "^2.3.3"
 dash = "^2.5.1"
 dash-bootstrap-components = "^1.2.0"
 
 [tool.poetry.dev-dependencies]
 black = {version = "^20.8b1", allow-prereleases = true}
-jupyter-contrib-nbextensions = "^0.5.1"
 pytest = "^6.2.4"
 
 [build-system]
