--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -21,13 +21,10 @@ jobs:
 
       - uses: actions/setup-python@v1
         with:
-          python-version: 3.9
+          python-version: 3.10
 
       - name: Install dependencies
-        run: pip install -r requirements.txt
-
-      - name: Install pytest
-        run: pip install "pytest>=6.2.4"
+        run: poetry install
 
       - name: Run tests
         run: pytest --disable-warnings
