--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -2,7 +2,7 @@ name: Test SPARQL queries
 
 on:
   schedule:
-    - cron: '23 */4 * * *'
+    - cron: '5 20 * * *'
   pull_request:
     branches:
       - master
@@ -17,11 +17,11 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
-      - uses: actions/setup-python@v1
+      - uses: actions/setup-python@v4
         with:
-          python-version: 3.10
+          python-version: 3.9
 
       - name: Install dependencies
         run: poetry install
