--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -33,4 +33,4 @@ jobs:
         run: poetry install
 
       - name: Run tests
-        run: pytest --disable-warnings
+        run: python -m pytest --disable-warnings
