--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -39,7 +39,7 @@ jobs:
         run: poetry install
 
       - name: Install pytest
-        run: pip install "pytest>=6.2.4"
+        run: pip freeze
 
       - name: Run tests
         run: python -m pytest --disable-warnings
