--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -26,6 +26,9 @@ jobs:
         with:
           python-version: 3.9
 
+      - name: update pip
+        run: python -m pip install --upgrade pip
+
       - name: Install poetry
         run: pip install poetry
 
