--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -45,4 +45,4 @@ jobs:
         run: pip freeze
 
       - name: Run tests
-        run: python -m pytest --disable-warnings
+        run: pytest --disable-warnings
