--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -42,7 +42,7 @@ jobs:
         run: poetry install
 
       - name: Install pytest
-        run: pip freeze
+        run: pip install "pytest>=6.2.4"
 
       - name: Run tests
-        run: pytest --disable-warnings
+        run: python -m pytest --disable-warnings
